bk_ida/gccida/g0/constant_subword
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1775:44: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  constant_subword( rtx op, int offset, machine_mode mode) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1782:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_1; // [rsp+30h] [rbp-F0h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1784:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_0; // [rsp+70h] [rbp-B0h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1786:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+B0h] [rbp-70h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1797:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1804:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_FLOAT && mode_bitsize[mode] == 64 && *( _WORD *)op == 55 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1820:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_FLOAT && mode_bitsize[mode] > 0x40u && *( _WORD *)op == 55 ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1847:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_FLOAT && mode_bitsize[mode] == 32 && *( _WORD *)op == 55 ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1854:12: error: expected expression
else if (  struct op == const_int_rtx[64] ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1858:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_INT && ( *( _WORD *)op == 54 || *( _WORD *)op == 55) ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1880:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( __int64)op[1]; 
                   ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/emit-rtl.c:1885:43: error: invalid suffix 'xmode' on integer constant
val = trunc_int_for_mode( val, *(short *)0xmode); 
                                          ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constant_subword/src/obj/emit-rtl.o] Error 1
